Fix back button z-indexing

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -62,6 +62,7 @@
   position: absolute;
   right: 16px;
   top: 16px;
+  z-index: 1;
 }
 .notice {
   position: fixed;
